--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.64.1",
     "web-vitals": "^2.1.3"
