--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.64.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
