--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    env: 
+      REACT_APP_BACKEND_URL: ${{vars.REACT_APP_BACKEND_URL}}
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
