--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-loader-spinner": "^5.3.4",
+    "react-loading-skeleton": "^3.5.0",
     "react-redux": "^8.1.2",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
